Replace keypad numbers with ordinary numbers.

BUG:293120